--- a/app/src/main/res/layout/activity_grid_view_dialog.xml
+++ b/app/src/main/res/layout/activity_grid_view_dialog.xml
@@ -20,8 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_height="400dp"
         android:numColumns="2"
+        android:horizontalSpacing="10dp"
         android:layout_below="@id/titleGridViewDialog"
-        android:layout_marginTop="10dp"/>
+        android:layout_margin="10dp"/>
 
     <Button
         android:id="@+id/btnDialogOK"
