--- a/app/src/main/res/layout/activity_image_list_view_dialog.xml
+++ b/app/src/main/res/layout/activity_image_list_view_dialog.xml
@@ -13,14 +13,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:textSize="20dp"
-        android:text="Image ListView Dialog" />
+        android:text="ListView Dialog" />
 
     <ListView
         android:id="@+id/imageListView"
         android:layout_width="wrap_content"
         android:layout_height="400dp"
         android:layout_below="@id/titleImageListViewDialog"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp" />
 
     <Button
         android:id="@+id/btnDialogOK"
@@ -30,6 +30,7 @@
         android:textColorHint="@color/white"
         android:layout_below="@id/imageListView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        />
 
 </RelativeLayout>
